{
    "name": "TacticsInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b8c4c8e5-2d2a-4b5e-9f1a-3c4d5e6f7a8b",
            "actions": [
                {
                    "name": "TestGrid",
                    "type": "Button",
                    "id": "a1b2c3d4-e5f6-7a8b-9c0d-1e2f3a4b5c6d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "f1e2d3c4-b5a6-9c8d-7e6f-0a1b2c3d4e5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c1d2e3f4-a5b6-7c8d-9e0f-1a2b3c4d5e6f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b1c2d3e4-f5a6-7b8c-9d0e-1f2a3b4c5d6e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestGrid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1e2f3a4-b5c6-7d8e-9f0a-1b2c3d4e5f6a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1f2a3b4-c5d6-7e8f-9a0b-1c2d3e4f5a6b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}